# erp-luciano-martins-backend

./: .flake8  .isort.cfg  .pre-commit-config.yaml  README.md  build_files.sh  conftest.py  coverage.xml  manage.py  pyproject.toml  pytest.ini  requirements.txt  vercel.json
accounts/: api.py  schemas.py
accounts/migrations/: 0001_initial.py
accounts/pytest/: conftest.py  test_user.py
cardbank/: api.py  schemas.py
cardbank/tests/: conftest.py  test_cardbank.py
core/: api.py  constants.py  models.py  schemas.py
erp_luciano_martins/: api.py  asgi.py  settings.py  urls.py  wsgi.py
gasto/: admin.py  api.py  apps.py  models.py  schemas.py
gasto/migrations/: 0001_initial.py  0002_segmento.py  0003_gasto_parcelas.py
gasto/tests/: conftest.py  test_gasto.py
parcelas/: admin.py  api.py  schemas.py
parcelas/tests/: conftest.py  test_parcelas.py
segmento/: api.py  schemas.py
segmento/tests/: conftest.py  test_segmento.py
utils/: datasetService.py  export_data_to_pandas.py  filename_csv.py  main.py  vetorizacaoService.py
