[project]
name = "erp-luciano-martins-backend"
version = "0.1.0"
description = "Sistema Backend do projeto ERP Luciano Martins hospedado na Vercel"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # --- Produção (Vercel) ---
    "django>=5.2.7",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.4.3",
    "django-ninja-extra>=0.30.1",
    "django-ninja-jwt>=5.3.9",
    "psycopg2-binary>=2.9.11",
    "python-decouple>=3.8",
    "dj-database-url>=3.0.1",
    "gunicorn>=23.0.0",
    "whitenoise>=6.11.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.0",
    "taskipy>=1.14.1",
    "ipython>=9.6.0",
    "django-extensions>=4.1",
    "pytest>=8.4.2",
    "pytest-django>=4.11.1",
    "faker>=37.12.0",
]
ml = [
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "statsmodels>=0.14.5",
    "matplotlib>=3.10.7",
    "prophet>=1.2.1",
]

[tool.taskipy.tasks]
migrate = "uv run python manage.py migrate"
makemigrations = "uv run python manage.py makemigrations"
runserver = "uv run python manage.py runserver"
createsuperuser = 'uv run python manage.py createsuperuser --username="admin" --email="admin@email.com"'
collectstatic = "uv run python manage.py collectstatic"
shell_plus = "uv run python manage.py shell_plus"
showmigrations = "uv run python manage.py showmigrations"
show_urls = "uv run python manage.py show_urls"
pytest = "uv run pytest -vv"
lint = "ruff check"
lint_fix = "ruff check --fix"